complete assignNewCourseController